tsconfig: +2 commented-out inclusions (svelte-kit/tsconfig.json, *.config.js) to possibly better align derived tsconfig with svelte-kit tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,12 @@
   "_help": "https://www.typescriptlang.org/tsconfig/#quick-nav-Top%20Level",
   "$schema": "https://json.schemastore.org/tsconfig",
   "include": [
+    // "*.config.js",
     "*.config.ts",
     "svelte-kit/ambient.d.ts",
     "svelte-kit/non-ambient.d.ts",
     "svelte-kit/types/**/$types.d.ts",
+    // "svelte-kit/tsconfig.json",
     "src/**/*.js",
     "src/**/*.ts",
     "src/**/*.svelte",
