--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "@fontsource/overpass-mono": "^5.1.0",
     "@sveltejs/adapter-static": "^3.0.5",
     "@sveltejs/kit": "^2.7.2",
-    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "~9.13.0",
-    "linted": "~17.1.0",
+    "linted": "18.0.0-rc.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "run-script-os": "^1.1.6",
+    "svelte": "^5.0.5",
     "svelte-check": "^4.0.5",
     "tailwindcss": "^3.4.14",
     "ts-add-js-extension": "^1.6.4",
