--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
   // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
   // from the referenced tsconfig.json - TypeScript does not merge them in
   "display": "@jimbojet/tsc",
-  "_version": "5.6.7",
-  "_help": "https://www.typescriptlang.org/tsconfig/#quick-nav-Top%20Level",
+  "version": "5.6.9",
+  "$help": "https://www.typescriptlang.org/tsconfig/#quick-nav-Top%20Level",
   "$schema": "https://json.schemastore.org/tsconfig",
   "include": [
     "*.config.ts",
