--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "22.10.1",
+  "_schemaVersion": "22.10.2",
   "name": "jimmy",
   "version": "10.5.15",
   "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
@@ -42,7 +42,7 @@
     "autoprefixer": "^10.4.20",
     "chai": "^5.1.2",
     "eslint": "~9.13.0",
-    "linted": "~19.4.2",
+    "linted": "~20.0.0",
     "mocha": "^10.8.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
@@ -96,6 +96,9 @@
     "starter:svelte": "vite preview",
     "prestart": "npm test",
     "prepublishOnly": "npm test",
+    "postpublish": "run-os",
+    "postpublish:default": "if [ \"${npm_package_version#*-}\" = \"${npm_package_version}\" ]; then npm dist-tag add \"$npm_package_name@$npm_package_version\" latest; fi",
+    "postpublish:windows": "cmd /c for /f \"delims=-\" %a in (\"%npm_package_version%\") do if \"%a\" == \"%npm_package_version%\" npm dist-tag add \"%npm_package_name%@%npm_package_version%\" latest",
     "predeploy": "npm test",
     "deploy": ""
   },
