--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "autoprefixer": "^10.4.20",
     "chai": "^5.1.2",
     "eslint": "~9.14.0",
-    "linted": "~21.0.0",
+    "linted": "21.1.0",
     "mocha": "^10.8.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
