--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "autoprefixer": "^10.4.20",
     "chai": "^5.1.2",
     "eslint": "~9.14.0",
-    "linted": "21.1.0",
+    "linted": "~21.2.0",
     "mocha": "^10.8.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.1.12",
-    "svelte-check": "^4.0.5",
+    "svelte": "^5.1.13",
+    "svelte-check": "^4.0.6",
     "tailwindcss": "^3.4.14",
     "ts-add-js-extension": "^1.6.5",
     "tslib": "^2.8.1",
