--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "_schemaVersion": "22.11.2",
+  "_schemaVersion": "22.11.3",
   "name": "jimmy",
   "version": "10.7.0",
   "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
@@ -31,23 +31,24 @@
     "npm": ">=10.9.0"
   },
   "peerDependenciesMeta": {},
+  "dependencies": {},
   "devDependencies": {
     "@fontsource/open-sans": "^5.1.0",
     "@fontsource/overpass-mono": "^5.1.0",
     "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.8.2",
-    "@sveltejs/vite-plugin-svelte": "^4.0.1",
+    "@sveltejs/kit": "^2.8.4",
+    "@sveltejs/vite-plugin-svelte": "^4.0.2",
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.10",
     "autoprefixer": "^10.4.20",
     "chai": "^5.1.2",
     "eslint": "~9.15.0",
-    "linted": "~23.5.0",
+    "linted": "~23.6.0",
     "mocha": "^10.8.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.49",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.2.7",
+    "svelte": "^5.2.9",
     "svelte-check": "^4.1.0",
     "tailwindcss": "^3.4.15",
     "ts-add-js-extension": "^1.6.5",
@@ -56,10 +57,16 @@
     "vite": "^5.4.11"
   },
   "scripts": {
+    "prebuild": "npm ci || run-s prebuild:reinstall:*",
+    "prebuild:reinstall:install": "npm i",
+    "prebuild:reinstall:add": "git add *",
+    "prebuild:reinstall:commit": "run-os",
+    "prebuild:reinstall:commit:default": "git commit -m \"reinstall ${npm_package_version}\"",
+    "prebuild:reinstall:commit:windows": "git commit -m \"reinstall %npm_package_version%\"",
     "build": "run-os",
-    "build:default": "npm run rebuild -- $npm_package_config_language $npm_package_config_lint default",
-    "build:windows": "npm run rebuild -- %npm_package_config_language% %npm_package_config_lint% windows",
-    "rebuild": "run-s \"clean:{1}:{3}\" \"compile:{1}:*\" \"lint:{2}\" \"test:{1}\" --",
+    "build:default": "npm run rebuild+lint+test -- $npm_package_config_language $npm_package_config_lint default",
+    "build:windows": "npm run rebuild+lint+test -- %npm_package_config_language% %npm_package_config_lint% windows",
+    "rebuild+lint+test": "run-s \"clean:{1}:{3}\" \"compile:{1}:*\" \"lint:{2}\" \"test:{1}\" --",
     "clean:ts:default": "rm -rf dist",
     "clean:ts:windows": "cmd /c if exist dist rmdir /s /q dist",
     "clean:svelte:default": "rm -rf build .svelte-kit",
@@ -75,26 +82,26 @@
     "compile:svelte:sync": "svelte-kit sync",
     "compile:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
     "compile:svelte:compile": "vite build",
-    "li": "eslint --cache --fix",
     "lint": "npm run build",
     "lint:true": "run-os",
-    "lint:true:default": "run-p lint:scope:global:* \"lint:scope:$npm_package_config_language\"",
-    "lint:true:windows": "run-p lint:scope:global:* \"lint:scope:%npm_package_config_language%\"",
+    "lint:true:default": "run-s lint:scope:global:* \"lint:scope:$npm_package_config_language\"",
+    "lint:true:windows": "run-s lint:scope:global:* \"lint:scope:%npm_package_config_language%\"",
     "lint:false": "(npm run lint:true) || (echo \"Skipped linting (lint=false)\")",
-    "lint:scope:global:configs": "npm run li -- {*,.github/**/*}.{json,jsonc,yml,yaml,js,cjs,mjs,ts,cts,mts}",
-    "lint:scope:global:code": "npm run li -- {src,tests,static,typings}/**/*.{html,js,cjs,mjs,ts,cts,mts}",
-    "lint:scope:ts": "exit 0",
-    "lint:scope:svelte": "npm run li -- {src,tests,static}/**/*.svelte",
+    "lint:scope:global:configs": "npm run linter -- {*,.github/**/*}.{json,jsonc,yml,yaml,js,cjs,mjs,ts,cts,mts}",
+    "lint:scope:global:code": "npm run linter -- {src,tests,static,typings}/**/*.{html,js,cjs,mjs,ts,cts,mts}",
+    "lint:scope:ts": "echo \"Linting `ts`\"",
+    "lint:scope:svelte": "npm run linter -- {src,tests,static}/**/*.svelte",
+    "linter": "eslint --cache --fix",
     "postbuild": "echo \"Build (+lint) complete.\"",
     "pretest": "npm run build",
     "test": "",
     "test:ts": "mocha",
     "test:svelte": "",
     "start": "run-os",
-    "start:default": "npm run starter:$npm_package_config_language",
-    "start:windows": "npm run starter:%npm_package_config_language%",
-    "starter:ts": "node .",
-    "starter:svelte": "vite preview",
+    "start:default": "npm run start+os:$npm_package_config_language",
+    "start:windows": "npm run start+os:%npm_package_config_language%",
+    "start+os:ts": "node .",
+    "start+os:svelte": "vite preview",
     "prestart": "npm test",
     "prepublishOnly": "npm test",
     "postpublish": "run-os",
