--- a/package.json
+++ b/package.json
@@ -35,22 +35,20 @@
   "devDependencies": {
     "@fontsource/open-sans": "^5.1.1",
     "@fontsource/overpass-mono": "^5.1.1",
+    "@tailwindcss/vite": "^4.0.0",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.10",
-    "autoprefixer": "^10.4.20",
     "chai": "^5.1.2",
     "eslint": "~9.19.0",
     "linted": "~24.4.0",
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.5.1",
     "run-script-os": "^1.1.6",
     "svelte": "^5.19.3",
     "svelte-check": "^4.1.4",
-    "tailwindcss": "^3.4.17",
     "ts-add-js-extension": "^1.6.5",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
