--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$template": "22.13.5",
+  "$template": "22.13.6",
   "name": "jimmy",
   "version": "10.18.0-rc.5",
   "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
@@ -78,6 +78,11 @@
     "test": "",
     "test:ts": "mocha",
     "test:svelte": "",
+    "dev": "run-os",
+    "dev:default": "npm run dev+os:$npm_package_config_language",
+    "dev:windows": "npm run dev+os:%npm_package_config_language%",
+    "dev+os:ts": "npm start",
+    "dev+os:svelte": "vite dev",
     "start": "run-os",
     "start:default": "npm run start+os:$npm_package_config_language",
     "start:windows": "npm run start+os:%npm_package_config_language%",
