--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$template": "22.14.5",
+  "$template": "22.14.6",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -18,24 +18,24 @@
   "devDependencies": {
     "@fontsource/open-sans": "^5.1.1",
     "@fontsource/overpass-mono": "^5.1.1",
-    "@tailwindcss/vite": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.9",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.17.2",
+    "@sveltejs/kit": "^2.17.3",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
-    "eslint": "~9.20.1",
-    "linted": "~27.4.2",
+    "eslint": "~9.21.0",
+    "linted": "~28.0.0",
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.20.1",
+    "svelte": "^5.20.4",
     "svelte-check": "^4.1.4",
     "ts-add-js-extension": "^1.6.5",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
-    "vite": "^6.1.0"
+    "vite": "^6.2.0"
   },
   "type": "module",
   "main": "",
@@ -67,12 +67,9 @@
     "make:build-svelte:check": "svelte-check --tsconfig ./tsconfig.json",
     "make:build-svelte:compile": "vite build",
     "make:lint+false": "(run-s make:lint+true) || (echo \"Skip lint (optional).\")",
-    "make:lint+true": "run-os",
-    "make:lint+true:default": "(run-s lint-) && (npm run --if-present lint-$npm_package_config_language)",
-    "make:lint+true:windows": "(run-s lint-) && (npm run --if-present lint-%npm_package_config_language%)",
+    "make:lint+true": "run-s lint-all",
     "lint": "run-s build",
-    "lint-": "npm run linter -- \"{,src/**/,tests/**/,static/**/,typings/**/,public/**/,tools/**/,.github/**/,.vscode/**/}*.{js,cjs,mjs,ts,cts,mts,html,json,jsonc,code-snippets,yml,yaml}\"",
-    "lint-svelte": "npm run linter -- \"{,src/**/,tests/**/,static/**/,typings/**/,public/**/,tools/**/,.github/**/,.vscode/**/}*\"",
+    "lint-all": "npm run linter -- \"{,src/**/,tests/**/,static/**/,typings/**/,public/**/,tools/**/,.github/**/,.vscode/**/}*.{js,cjs,mjs,ts,cts,mts,svelte,html,json,jsonc,code-snippets,yml,yaml}\"",
     "linter": "eslint --cache --fix",
     "pretest": "run-s build",
     "test": "run-os",
