--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$template": "22.14.9",
+  "$template": "22.14.10",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -18,15 +18,15 @@
   "devDependencies": {
     "@fontsource/open-sans": "^5.2.5",
     "@fontsource/overpass-mono": "^5.2.5",
-    "@tailwindcss/vite": "^4.0.13",
+    "@tailwindcss/vite": "^4.0.14",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.19.0",
+    "@sveltejs/kit": "^2.19.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/chai": "^5.2.0",
     "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
     "eslint": "~9.22.0",
-    "linted": "~28.5.1",
+    "linted": "~28.7.1",
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
@@ -35,7 +35,7 @@
     "ts-add-js-extension": "^1.6.5",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
-    "vite": "^6.2.1"
+    "vite": "^6.2.2"
   },
   "type": "module",
   "main": "",
@@ -69,7 +69,7 @@
     "make:lint+false": "(run-s make:lint+true) || (echo \"Skip lint (optional).\")",
     "make:lint+true": "run-s lint-all",
     "lint": "run-s build",
-    "lint-all": "npm run linter -- \"{,src/**/,tests/**/,static/**/,typings/**/,public/**/,tools/**/,.github/**/,.vscode/**/}*.{js,cjs,mjs,ts,cts,mts,svelte,html,json,jsonc,code-snippets,yml,yaml}\"",
+    "lint-all": "npm run linter -- \"{,src/**/,tests/**/,static/**/,typings/**/,public/**/,tools/**/,.github/**/,.vscode/**/}*.{js,cjs,mjs,ts,cts,mts,svelte,html,css,json,jsonc,code-snippets,yml,yaml}\"",
     "linter": "eslint --cache --fix",
     "pretest": "run-s build",
     "test": "run-os",
