--- a/package.json
+++ b/package.json
@@ -14,19 +14,18 @@
     "npm": ">=11.2.0 <12"
   },
   "peerDependenciesMeta": {},
-  "dependencies": {},
   "devDependencies": {
     "@fontsource/open-sans": "^5.2.5",
     "@fontsource/overpass-mono": "^5.2.5",
-    "@tailwindcss/vite": "^4.0.17",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.20.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "^4.0.17",
     "@types/chai": "^5.2.1",
     "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
     "eslint": "~9.23.0",
-    "linted": "~28.16.2",
+    "linted": "28.17.1",
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
