--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "$pkg": "2214.1.0",
+  "$pkg": "2214.4.0",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
   "version": "10.38.0",
-  "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
   "repository": "github:jimmy-zhening-luo/jimmy",
-  "license": "MIT",
   "private": true,
   "engineStrict": true,
   "engines": {
     "node": ">=22.14.0 <23",
     "npm": ">=11.2.0 <12"
   },
+  "type": "module",
   "peerDependenciesMeta": {},
+  "dependencies": {},
   "devDependencies": {
     "@fontsource/open-sans": "^5.2.5",
     "@fontsource/overpass-mono": "^5.2.5",
@@ -25,7 +25,7 @@
     "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
     "eslint": "~9.23.0",
-    "linted": "28.17.1",
+    "linted": "~28.17.3",
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
@@ -36,7 +36,6 @@
     "typescript": "^5.8.2",
     "vite": "^6.2.3"
   },
-  "type": "module",
   "main": "",
   "types": "",
   "config": {
@@ -91,14 +90,10 @@
     "deploy": ""
   },
   "publishConfig": {
-    "access": "public",
     "tag": "next"
   },
-  "mocha": {
-    "spec": [
-      "dist/**/*.spec.js"
-    ]
-  },
+  "license": "MIT",
+  "description": "This repository contains Jimmy Luo's personal website. As of August 31, 2022, the main branch of this repository is continuously deployed to https://jimm.my.",
   "keywords": [
     "typescript",
     "sveltekit",
