--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2214.5.0",
+  "$pkg": "2214.6.1",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -18,23 +18,23 @@
     "@fontsource/open-sans": "^5.2.5",
     "@fontsource/overpass-mono": "^5.2.5",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.20.4",
+    "@sveltejs/kit": "^2.20.5",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.1.3",
     "@types/chai": "^5.2.1",
     "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
     "eslint": "~9.24.0",
-    "linted": "~28.24.2",
+    "linted": "~28.24.3",
     "mocha": "^11.1.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.25.9",
-    "svelte-check": "^4.1.5",
+    "svelte": "^5.26.2",
+    "svelte-check": "^4.1.6",
     "ts-add-js-extension": "^1.6.5",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vite": "^6.2.5"
+    "vite": "^6.2.6"
   },
   "main": "",
   "types": "",
@@ -69,7 +69,7 @@
     "postbuild": "echo \"Build complete.\"",
     "postbuild:lint:required:true": "npm run lint",
     "postbuild:lint:required:false": "(npm run lint) || (echo \"Linting (optional) skipped. Continuing...\")",
-    "lint": "eslint --cache --fix \"{,src/**/,tests/**/,static/**/,typings/**/,public/**/,tools/**/,.github/**/,.vscode/**/}*.{js,cjs,mjs,ts,cts,mts,svelte,html,css,json,jsonc,code-snippets,yml,yaml}\"",
+    "lint": "eslint --cache --fix \"{,{src,tests,static,typings,public,tools,.github,.vscode}/**/}*.{{,c,m}{j,t}s,svelte,html,css,json{,c},code-snippets,y{,a}ml}\"",
     "lint:clean": "npm run clean:lint && npm run lint",
     "pretest": "npm run build",
     "test": "run-os",
