--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2215.0.0",
+  "$pkg": "2215.1.0",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -8,8 +8,8 @@
   "private": true,
   "engineStrict": true,
   "engines": {
-    "node": ">=22.15.0 <23",
-    "npm": ">=11.3.0 <12"
+    "node": ">=22.15.1",
+    "npm": ">=11.4.0 <12"
   },
   "type": "module",
   "peerDependenciesMeta": {},
@@ -25,7 +25,7 @@
     "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
     "eslint": "~9.26.0",
-    "linted": "~28.31.1",
+    "linted": "~28.32.0",
     "mocha": "^11.2.2",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
