--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,8 +59,7 @@
     // "rootDirs": [],
     // "typeRoots": [],
     "types": [
-      "mocha",
-      "chai",
+      /* @OVERRIDE: -mocha,chai */
       /* {CONFIGURE} */
     ],
     // #endregion
