--- a/.github/workflows/int.yml
+++ b/.github/workflows/int.yml
@@ -37,13 +37,9 @@ jobs:
         uses: Azure/static-web-apps-deploy@v1
         with:
           # https://aka.ms/swaworkflowconfig
-          azure_static_web_apps_api_token: ${{ secrets.AZ_SWA_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: upload
-          # ##### App Config ######
-          app_location: build # built app
-          api_location: "" # built api - optional
-          # ##### End of App Config ######
+          azure_static_web_apps_api_token: ${{ secrets.AZ_SWA_API_TOKEN }}
+          app_location: build
+          is_static_export: true
           skip_api_build: true
           skip_app_build: true
-          is_static_export: true
