--- a/.github/workflows/PROD.main.yml
+++ b/.github/workflows/PROD.main.yml
@@ -9,6 +9,8 @@ jobs:
     environment:
       name: PROD.main
       url: https://jimm.my
+    permissions:
+      pull-requests: read # write required for Azure SWA to comment on PR
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
