--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,6 +9,8 @@ jobs:
     environment:
       name: dev
       url: https://dev.jimm.my
+    permissions:
+      pull-requests: read # write required for Azure SWA to comment on PR
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
