ci: hm, content.read is retardedly required despite me not even supplying my github token wtf

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -10,6 +10,7 @@ jobs:
       name: dev
       url: https://dev.jimm.my
     permissions:
+      contents: read
       pull-requests: read # write required for Azure SWA to comment on PR
     runs-on: ubuntu-latest
     steps:
