--- a/.github/workflows/PROD.main.yml
+++ b/.github/workflows/PROD.main.yml
@@ -10,6 +10,7 @@ jobs:
       name: PROD.main
       url: https://jimm.my
     permissions:
+      contents: read
       pull-requests: read # write required for Azure SWA to comment on PR
     runs-on: ubuntu-latest
     steps:
