--- a/.github/workflows/int.yml
+++ b/.github/workflows/int.yml
@@ -10,6 +10,7 @@ jobs:
       name: int
       url: https://int.jimm.my
     permissions:
+      contents: read
       pull-requests: read # write required for Azure SWA to comment on PR
     runs-on: ubuntu-latest
     steps:
