--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "@fontsource/overpass-mono": "^5.2.6",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.22.2",
-    "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "@sveltejs/vite-plugin-svelte": "^6.0.0-next.2",
     "@tailwindcss/vite": "^4.1.11",
-    "eslint": "~9.30.0",
-    "linted": "~29.1.1",
+    "eslint": "~9.30.1",
+    "linted": "~29.1.2",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.34.9",
+    "svelte": "^5.35.1",
     "svelte-check": "^4.2.2",
     "ts-add-js-extension": "^1.6.6",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "vite": "^7.0.0"
   },
   "main": "",
   "types": "",
