--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@sveltejs/vite-plugin-svelte": "^6.0.0-next.2",
     "@tailwindcss/vite": "^4.1.11",
     "eslint": "~9.30.1",
-    "linted": "~29.2.0",
+    "eslint-plugin-svelte": "~3.10.1",
+    "linted": "~30.0.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
     "svelte": "^5.35.1",
