--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2217.0.0",
+  "$pkg": "2217.1.0",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -19,19 +19,19 @@
     "@fontsource/overpass-mono": "^5.2.6",
     "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/kit": "^2.22.2",
-    "@sveltejs/vite-plugin-svelte": "^6.0.0-next.2",
+    "@sveltejs/vite-plugin-svelte": "^6.0.0-next.3",
     "@tailwindcss/vite": "^4.1.11",
     "eslint": "~9.30.1",
     "eslint-plugin-svelte": "~3.10.1",
-    "linted": "~30.0.1",
+    "linted": "~30.1.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.35.2",
+    "svelte": "^5.35.4",
     "svelte-check": "^4.2.2",
     "ts-add-js-extension": "^1.6.6",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vite": "^7.0.1"
+    "vite": "^7.0.2"
   },
   "main": "",
   "types": "",
@@ -66,7 +66,7 @@
     "postbuild": "echo \"Build complete.\"",
     "postbuild:lint:required:true": "npm run lint",
     "postbuild:lint:required:false": "(npm run lint) || (echo \"Linting (optional) skipped. Continuing...\")",
-    "lint": "eslint --cache --fix \"{,{src,tests,static,typings,public,tools,.github,.vscode}/**/}*.{{,c,m}{j,t}s,svelte,html,css,json{,c},code-snippets,y{,a}ml}\"",
+    "lint": "eslint --cache --fix \"{,{src,tests,static,typings,public,tools,.github,.vscode}/**/}*.{{,[cm]}[jt]s,svelte,html,css,json{,c},code-snippets,y{,a}ml}\"",
     "lint:clean": "npm run clean:lint && npm run lint",
     "pretest": "npm run build",
     "test": "run-os",
