--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "@fontsource/open-sans": "^5.2.6",
     "@fontsource/overpass-mono": "^5.2.6",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.22.2",
-    "@sveltejs/vite-plugin-svelte": "^6.0.0-next.3",
+    "@sveltejs/kit": "^2.22.5",
+    "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/vite": "^4.1.11",
-    "eslint": "~9.30.1",
+    "eslint": "~9.31.0",
     "eslint-plugin-svelte": "~3.10.1",
-    "linted": "~30.1.1",
+    "linted": "~30.2.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.35.4",
+    "svelte": "^5.35.6",
     "svelte-check": "^4.2.2",
     "ts-add-js-extension": "^1.6.6",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vite": "^7.0.3"
+    "vite": "^7.0.4"
   },
   "main": "",
   "types": "",
