--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2217.2.0",
+  "$pkg": "2217.3.0",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -8,8 +8,8 @@
   "private": true,
   "engineStrict": true,
   "engines": {
-    "node": ">=22.17.0",
-    "npm": ">=11.4.2 <12"
+    "node": "^22.17.1",
+    "npm": "^11.4.2"
   },
   "type": "module",
   "peerDependenciesMeta": {},
@@ -17,20 +17,20 @@
     "@fontsource/open-sans": "^5.2.6",
     "@fontsource/overpass-mono": "^5.2.6",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.24.0",
+    "@sveltejs/kit": "^2.25.1",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/vite": "^4.1.11",
     "eslint": "~9.31.0",
-    "eslint-plugin-svelte": "~3.10.1",
-    "linted": "~30.3.0",
+    "eslint-plugin-svelte": "~3.11.0",
+    "linted": "~30.4.0",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.36.2",
-    "svelte-check": "^4.2.2",
+    "svelte": "^5.36.8",
+    "svelte-check": "^4.3.0",
     "ts-add-js-extension": "^1.6.6",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vite": "^7.0.4"
+    "vite": "^7.0.5"
   },
   "main": "",
   "types": "",
