--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2217.4.0-alpha.1",
+  "$pkg": "2217.3.0",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -17,15 +17,15 @@
     "@fontsource/open-sans": "^5.2.6",
     "@fontsource/overpass-mono": "^5.2.6",
     "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.25.1",
+    "@sveltejs/kit": "^2.25.2",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/vite": "^4.1.11",
     "eslint": "~9.31.0",
     "eslint-plugin-svelte": "~3.11.0",
-    "linted": "~30.5.0",
+    "linted": "~30.5.1",
     "npm-run-all": "^4.1.5",
     "run-script-os": "^1.1.6",
-    "svelte": "^5.36.13",
+    "svelte": "^5.36.14",
     "svelte-check": "^4.3.0",
     "ts-add-js-extension": "^1.6.6",
     "tslib": "^2.8.1",
@@ -39,7 +39,13 @@
     "lint": "true"
   },
   "scripts": {
-    "clean": "(cmd /c \"(if exist build rmdir /s /q build) & (if exist .svelte-kit rmdir /s /q .svelte-kit)\") || (rm -rf build .svelte-kit && echo 'I am here')",
+    "clean": "run-os",
+    "clean:windows": "npm run clean:lang:%npm_package_config_language%:windows",
+    "clean:default": "npm run clean:lang:$npm_package_config_language:default",
+    "clean:lang:ts:windows": "cmd /c if exist dist rmdir /s /q dist",
+    "clean:lang:ts:default": "rm -rf dist",
+    "clean:lang:svelte:windows": "cmd /c \"(if exist build rmdir /s /q build) & (if exist .svelte-kit rmdir /s /q .svelte-kit)\"",
+    "clean:lang:svelte:default": "rm -rf build .svelte-kit",
     "clean:lint": "run-os",
     "clean:lint:windows": "cmd /c if exist .eslintcache del /f /q .eslintcache",
     "clean:lint:default": "rm -f .eslintcache",
