--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "$pkg": "2217.3.0",
+  "$pkg": "2211.1.3",
   "$schema": "https://json.schemastore.org/package",
   "$help": "https://docs.npmjs.com/cli/configuring-npm/package-json",
   "name": "jimmy",
@@ -8,76 +8,45 @@
   "private": true,
   "engineStrict": true,
   "engines": {
-    "node": "^22.17.1",
-    "npm": "^11.4.2"
+    "node": "^22",
+    "npm": "^10 || ^11"
   },
   "type": "module",
   "peerDependenciesMeta": {},
   "devDependencies": {
     "@fontsource/open-sans": "^5.2.6",
     "@fontsource/overpass-mono": "^5.2.6",
-    "@sveltejs/adapter-static": "^3.0.8",
-    "@sveltejs/kit": "^2.25.2",
-    "@sveltejs/vite-plugin-svelte": "^6.1.0",
+    "@sveltejs/adapter-static": "^3.0.9",
+    "@sveltejs/kit": "^2.27.3",
+    "@sveltejs/vite-plugin-svelte": "^6.1.1",
     "@tailwindcss/vite": "^4.1.11",
-    "eslint": "~9.31.0",
+    "eslint": "~9.33.0",
     "eslint-plugin-svelte": "~3.11.0",
-    "linted": "~30.5.1",
-    "npm-run-all": "^4.1.5",
-    "run-script-os": "^1.1.6",
-    "svelte": "^5.36.14",
-    "svelte-check": "^4.3.0",
+    "linted": "~30.9.0",
+    "svelte": "^5.38.0",
+    "svelte-check": "^4.3.1",
     "ts-add-js-extension": "^1.6.6",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.5"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.1"
   },
   "main": "",
   "types": "",
-  "config": {
-    "language": "svelte",
-    "lint": "true"
-  },
   "scripts": {
-    "clean": "run-os",
-    "clean:windows": "npm run clean:lang:%npm_package_config_language%:windows",
-    "clean:default": "npm run clean:lang:$npm_package_config_language:default",
-    "clean:lang:ts:windows": "cmd /c if exist dist rmdir /s /q dist",
-    "clean:lang:ts:default": "rm -rf dist",
-    "clean:lang:svelte:windows": "cmd /c \"(if exist build rmdir /s /q build) & (if exist .svelte-kit rmdir /s /q .svelte-kit)\"",
-    "clean:lang:svelte:default": "rm -rf build .svelte-kit",
-    "clean:lint": "run-os",
-    "clean:lint:windows": "cmd /c if exist .eslintcache del /f /q .eslintcache",
-    "clean:lint:default": "rm -f .eslintcache",
+    "clean": "cmd --% /c \"(if exist dist rmdir /s /q dist) & (if exist build rmdir /s /q build) & (if exist .svelte-kit rmdir /s /q .svelte-kit) & (if exist .eslintcache del /f /q .eslintcache)\" || rm -rf dist build .svelte-kit .eslintcache",
     "prebuild": "npm run clean",
-    "build": "run-os",
-    "build:windows": "run-s build:lang:%npm_package_config_language%:* postbuild:lint:required:%npm_package_config_lint%",
-    "build:default": "run-s build:lang:$npm_package_config_language:* postbuild:lint:required:$npm_package_config_lint",
-    "build:lang:ts:compile": "tsc",
-    "build:lang:ts:rewrite": "ts-add-js-extension --dir=dist",
-    "build:lang:svelte:sync": "svelte-kit sync",
-    "build:lang:svelte:check": "svelte-check --tsconfig ./tsconfig.json",
-    "build:lang:svelte:compile": "vite build",
-    "postbuild": "echo \"Build complete.\"",
-    "postbuild:lint:required:true": "npm run lint",
-    "postbuild:lint:required:false": "(npm run lint) || (echo \"Linting (optional) skipped. Continuing...\")",
+    "build": "npm run build:svelte",
+    "build:svelte": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json && vite build",
+    "postbuild": "npm run lint || echo \"Lint failed. Continuing...\"",
     "lint": "eslint --cache --fix \"{,{src,tests,static,typings,public,tools,.github,.vscode}/**/}*.{{,[cm]}[jt]s,svelte,html,css,json{,c},code-snippets,y{,a}ml}\"",
-    "lint:clean": "npm run clean:lint && npm run lint",
     "pretest": "npm run build",
-    "test": "run-os",
-    "test:default": "npm run --if-present test:lang:$npm_package_config_language",
-    "test:windows": "npm run --if-present test:lang:%npm_package_config_language%",
-    "test:lang:ts": "mocha",
+    "test": "",
     "prestart": "npm test",
-    "start": "run-os",
-    "start:default": "npm run start:lang:$npm_package_config_language",
-    "start:windows": "npm run start:lang:%npm_package_config_language%",
-    "start:lang:ts": "node .",
-    "start:lang:svelte": "vite preview --open",
+    "start": "npm run start:svelte",
+    "start:svelte": "vite preview --open",
     "prepublishOnly": "npm test",
-    "postpublish": "run-os",
+    "postpublish": "cmd --% /c \"for /f \"delims=-\" %a in (\"%npm_package_version%\") do if \"%a\" == \"%npm_package_version%\" npm dist-tag add \"%npm_package_name%@%npm_package_version%\" latest\" || npm run postpublish:default",
     "postpublish:default": "if [ \"${npm_package_version#*-}\" = \"${npm_package_version}\" ]; then npm dist-tag add \"$npm_package_name@$npm_package_version\" latest; fi",
-    "postpublish:windows": "cmd /c for /f \"delims=-\" %a in (\"%npm_package_version%\") do if \"%a\" == \"%npm_package_version%\" npm dist-tag add \"%npm_package_name%@%npm_package_version%\" latest",
     "predeploy": "npm test",
     "deploy": ""
   },
