enable allowJs and checkJs in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,8 +57,8 @@
     // "preserveConstEnums": true,
     // "removeComments": true /* @OVERRIDE */,
     "sourceMap": true,
-    // "allowJs": true,
-    // "checkJs": true,
+    "allowJs": true /* @OVERRIDE */,
+    "checkJs": true /* @OVERRIDE */,
     "allowSyntheticDefaultImports": true,
     // "erasableSyntaxOnly": true,
     // "esModuleInterop": true,
