--- a/.github/workflows/int.yml
+++ b/.github/workflows/int.yml
@@ -1,8 +1,5 @@
 name: Azure Deploy (int)
-on:
-  push:
-    branches:
-      - int
+on: { push: { branches: [int] } }
 jobs:
   deploy-int:
     name: Build/Deploy (int)
@@ -11,21 +8,16 @@ jobs:
       url: https://int.jimm.my
     permissions:
       contents: read
-      pull-requests: read # write required for Azure SWA to comment on PR
+      pull-requests: read
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v4
-        with:
-          submodules: true
-          lfs: false
       - name: Install Node
         id: node
         uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          check-latest: true
+        with: { node-version: 22 }
       - name: Install Dependencies
         id: ci
         run: npm ci
@@ -38,7 +30,7 @@ jobs:
         with:
           # https://aka.ms/swaworkflowconfig
           action: upload
-          azure_static_web_apps_api_token: ${{ secrets.AZ_SWA_API_TOKEN }}
+          azure_static_web_apps_api_token: ${{secrets.AZ_SWA_API_TOKEN}}
           app_location: build
           is_static_export: true
           skip_api_build: true
