--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,3 +1,4 @@
+--- # dev.yml
 name: Azure Deploy (dev)
 on: { push: { branches: [dev] } }
 jobs:
@@ -35,3 +36,5 @@ jobs:
           is_static_export: true
           skip_api_build: true
           skip_app_build: true
+
+...
