--- a/.github/workflows/int.yml
+++ b/.github/workflows/int.yml
@@ -1,3 +1,4 @@
+--- # int.yml
 name: Azure Deploy (int)
 on: { push: { branches: [int] } }
 jobs:
@@ -35,3 +36,5 @@ jobs:
           is_static_export: true
           skip_api_build: true
           skip_app_build: true
+
+...
